# raii-unique_rc

./: .clang-tidy  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: CMakeLists.txt  config.hpp.in
docs/: How to build with CMake.txt
examples/: CMakeLists.txt  ConstevalLambda.cpp  UniqueCoroutineHandle.cpp  UniquePtr.cpp
examples/inc/: CallLog.hpp  StdPrint.hpp
sample_app/: CMakeLists.txt
sample_app/inc/: CallLog.hpp  consteval_lambda_example.hpp  coroutine_example.hpp  test_deleter.hpp
sample_app/src/: main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  unique_ptr_tests.cpp  winapi_tests.cpp
test/inc/: memory_mock_deleter.hpp  mock_generic_deallocator_no_op.hpp  mock_pointer_no_op.hpp  testsuite_no_op_deallocator.hpp  testsuite_ptr.hpp
test/src/: reset.cpp
test/src/access/: array_subscript.cpp  single_dereference.cpp
test/src/assignment/: deleter_inheritance.cpp  forward_deleter.cpp  move_array.cpp  move_assign_neg.cpp  move_single.cpp  nullptr.cpp
test/src/construction/: construct_default.cpp  construct_default_coro.cpp  construct_move.cpp  construct_move_neg.cpp  cv_qualifiers.cpp  from_pointer.cpp  from_pointer_array.cpp  from_pointer_deleter.cpp  lwg2905.cpp  noexcept_construct.cpp  noexcept_construct_coro.cpp  nullptr.cpp
test/src/creation/: aggregate.cpp  array.cpp  for_overwrite.cpp  single.cpp
test/src/hash/: constexpr_hash.cpp  hash.cpp  hash_coro.cpp  types.cpp
test/src/io/: lwg2948.cpp
test/src/modifiers/: constexpr_release.cpp  constexpr_reset.cpp  cv_qualifiers.cpp  release.cpp  reset.cpp
test/src/observers/: constexpr_observers.cpp
test/src/requirements/: dr2228.cpp  dr2899.cpp  lwg2762.cpp  lwg4148.cpp  lwg4324.cpp  ptr_type_array.cpp  ptr_type_single.cpp
test/src/specialised_algorithms/: compare.cpp  comparisons.cpp  constexpr_compare.cpp  constexpr_swap.cpp  swap.cpp  swap_incomplete_type.cpp
unique_rc/: CMakeLists.txt
unique_rc/inc/: concepts.hpp  defs.hpp  unique_ptr.hpp  unique_rc.hpp
unique_rc/inc/deleter/: coroutine_deleter.hpp  coroutine_destroy.hpp  memory_delete.hpp  memory_deleter.hpp  stdio_closer.hpp  stdio_fclose.hpp  test_policies.hpp  windows_close_handle.hpp  windows_com_deleter.hpp  windows_com_file_dlg_unadvise.hpp  windows_com_release.hpp  windows_dc_delete.hpp  windows_dc_deleter.hpp  windows_dc_release.hpp  windows_dc_restore.hpp  windows_delete_gdi_object.hpp  windows_gdi_deleter.hpp  windows_gdi_select_object.hpp  windows_handle_deleter.hpp  windows_select_gdi_object.hpp
unique_rc/include/urc/: concepts.hpp  coroutine_destroy.hpp  deleter_com.hpp  deleter_com_shell.hpp  deleter_windows_gdi.hpp  deleter_windows_kernel.hpp  memory_delete.hpp  stdio_fclose.hpp  unique_coroutine_handle.hpp  unique_ptr.hpp  unique_rc.hpp
unique_rc/include/urc/deleter/: coroutine_destroy.hpp  memory_delete.hpp  stdio_fclose.hpp  windows_close_handle.hpp  windows_com_file_dlg_unadvise.hpp  windows_com_release.hpp  windows_dc_delete.hpp  windows_dc_release.hpp  windows_dc_restore.hpp  windows_delete_gdi_object.hpp  windows_select_gdi_object.hpp
unique_rc/src/: unique_ptr.cpp  unique_rc.cpp
